after due date: forgot footer font fam
added Caveat

--- a/sass/footer/footer.scss
+++ b/sass/footer/footer.scss
@@ -8,6 +8,7 @@
         overflow: hidden;
         position: fixed;
         bottom: 0px;
+        font-family: CaveatReg;
         
 
     &__content {
